--- a/build.gradle
+++ b/build.gradle
@@ -25,3 +25,7 @@ compileKotlin {
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
+jar {
+    manifest { attributes 'Main-Class': 'main.MainKt' }
+    from { configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
+}
