--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,13 @@
 plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.3.71'
+    id 'application'
 }
 
 group 'org.example'
 version '1.0-SNAPSHOT'
+
+application { mainClassName("MainKt") }
 
 repositories {
     google()
